# tipbot

./: .gitignore  1664320101_file.tgs  README.md  file_0  jest.config.js  package.json
contract/: Cargo.toml  README.md
contract/src/: auth_tips.rs  claim.rs  config.rs  deposit.rs  events.rs  ft.rs  generic_tips.rs  internal.rs  legacy.rs  lib.rs  migration.rs  service_account.rs  tip.rs  tiptoken.rs  treasury.rs  unclaimed_tips.rs  views.rs  whitelisted_token.rs  withdraw.rs  wrap.rs
listing/: Cargo.toml  README.md  build_docker_m1.sh  build_local.sh  listing.txt  package.json
listing/contract/: compile.js
listing/contract/src/: auction.rs  events.rs  finalize.rs  ft.rs  lib.rs  utils.rs  vote.rs
listing/contract/tests/workspaces/: main.rs
listing/test/: auction.test.js  config.js  helper.js  rest-api-test-utils.js  rest-api.test.js  utils.js
src/: App.js  app-settings.js  app.css  config.js  global.css  index.html  useDetectOutsideClick.js  utils.js
test/: accounts.js  config.js  rest-api-dummy-data.test.js  rest-api-test-utils.js  rest-api.test-old._js  rest-api.test.js  utils.js
token/: Cargo.toml  README.md  build_local.sh  package.json
token/contract/src/: core_impl.rs  free_storage.rs  internal.rs  lib.rs
