[package]
name = "tipbot"
version = "0.1.0"
authors = ["Zavodil <zavodil.ru@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
near-sdk = "=4.0.0"
near-sys = "=0.1"
uint = { version = "=0.9.0", default-features = false }
once_cell = "=1.8.0"

[dev-dependencies]
rand = "0.8"

