[package]
name = "listing"
version = "0.1.0"
authors = ["Vadim Ilin <vadim@near.org>"]
edition = "2018"
publish = false

[lib]
path = "contract/src/lib.rs"
crate-type = ["cdylib"]

[dependencies]
near-sdk = "=4.0.0"
uint = { version = "=0.9.0", default-features = false }

[dev-dependencies]
anyhow = "1.0"
borsh = "0.9"
maplit = "1.0"
near-units = "0.1.0"
serde = "1.0"
serde_with = "1"
serde_json = { version = "1.0", features = ["arbitrary_precision"] }
tokio = { version = "1.10.0", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3.5", features = ["env-filter"] }
workspaces = "0.3.1"

[[example]]
name = "main"
path = "contract/tests/workspaces/main.rs"

[profile.release]
codegen-units = 1
opt-level = "z"
lto = true
debug = false
panic = "abort"
overflow-checks = true

[workspace]
members = []